--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.12.0"
+    "nodemon": "^2.0.22",
+    "react-router-dom": "^6.13.0"
   }
 }
